name:                travisnextgen
version:             0
license:             BSD3
license-file:        LICENSE
maintainer:          hvr@gnu.org
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, text
  default-language:    Haskell2010

test-suite t1
  type: exitcode-stdio-1.0
  build-depends: base
  main-is: T1.hs

  default-language:    Haskell2010
